internal/parser/testsuite_parser.go
// Code generated from TestSuite.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // TestSuite

import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type TestSuiteParser struct {
	*antlr.BaseParser
}

var TestSuiteParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func testsuiteParserInit() {
  staticData := &TestSuiteParserStaticData
  staticData.LiteralNames = []string{
    "", "'Checks'", "'{'", "'}'", "'ImpliedRelations'", "'=>'", "'#'", "'DelegationAssertions'", 
    "'@'", "':'", "'!'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "NEGATION", "OPERATION", "ID", 
    "STRING", "DID", "HEX", "HEXDIG", "COMMENT", "WS", "NL",
  }
  staticData.RuleNames = []string{
    "relationship_set", "policy_tests", "checks", "check", "implied_relations", 
    "implied_relation", "object_rel", "delegation_assertions", "delegation_assertion", 
    "relationship", "subject", "object", "object_id", "relation", "resource", 
    "actorid",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// TestSuiteParserInit initializes any static state used to implement TestSuiteParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTestSuiteParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TestSuiteParserInit() {
  staticData := &TestSuiteParserStaticData
  staticData.once.Do(testsuiteParserInit)
}

// NewTestSuiteParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTestSuiteParser(input antlr.TokenStream) *TestSuiteParser {
	TestSuiteParserInit()
	this := new(TestSuiteParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &TestSuiteParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "TestSuite.g4"

	return this
}


// TestSuiteParser tokens.
const (
	TestSuiteParserEOF = antlr.TokenEOF
	TestSuiteParserT__0 = 1
	TestSuiteParserT__1 = 2
	TestSuiteParserT__2 = 3
	TestSuiteParserT__3 = 4
	TestSuiteParserT__4 = 5
	TestSuiteParserT__5 = 6
	TestSuiteParserT__6 = 7
	TestSuiteParserT__7 = 8
	TestSuiteParserT__8 = 9
	TestSuiteParserNEGATION = 10
	TestSuiteParserOPERATION = 11
	TestSuiteParserID = 12
	TestSuiteParserSTRING = 13
	TestSuiteParserDID = 14
	TestSuiteParserHEX = 15
	TestSuiteParserHEXDIG = 16
	TestSuiteParserCOMMENT = 17
	TestSuiteParserWS = 18
	TestSuiteParserNL = 19
)

// TestSuiteParser rules.
const (
	TestSuiteParserRULE_relationship_set = 0
	TestSuiteParserRULE_policy_tests = 1
	TestSuiteParserRULE_checks = 2
	TestSuiteParserRULE_check = 3
	TestSuiteParserRULE_implied_relations = 4
	TestSuiteParserRULE_implied_relation = 5
	TestSuiteParserRULE_object_rel = 6
	TestSuiteParserRULE_delegation_assertions = 7
	TestSuiteParserRULE_delegation_assertion = 8
	TestSuiteParserRULE_relationship = 9
	TestSuiteParserRULE_subject = 10
	TestSuiteParserRULE_object = 11
	TestSuiteParserRULE_object_id = 12
	TestSuiteParserRULE_relation = 13
	TestSuiteParserRULE_resource = 14
	TestSuiteParserRULE_actorid = 15
)

// IRelationship_setContext is an interface to support dynamic dispatch.
type IRelationship_setContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllRelationship() []IRelationshipContext
	Relationship(i int) IRelationshipContext

	// IsRelationship_setContext differentiates from other interfaces.
	IsRelationship_setContext()
}

type Relationship_setContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRelationship_setContext() *Relationship_setContext {
	var p = new(Relationship_setContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_relationship_set
	return p
}

func InitEmptyRelationship_setContext(p *Relationship_setContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_relationship_set
}

func (*Relationship_setContext) IsRelationship_setContext() {}

func NewRelationship_setContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Relationship_setContext {
	var p = new(Relationship_setContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_relationship_set

	return p
}

func (s *Relationship_setContext) GetParser() antlr.Parser { return s.parser }

func (s *Relationship_setContext) AllRelationship() []IRelationshipContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRelationshipContext); ok {
			len++
		}
	}

	tst := make([]IRelationshipContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRelationshipContext); ok {
			tst[i] = t.(IRelationshipContext)
			i++
		}
	}

	return tst
}

func (s *Relationship_setContext) Relationship(i int) IRelationshipContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationshipContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationshipContext)
}

func (s *Relationship_setContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Relationship_setContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Relationship_setContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterRelationship_set(s)
	}
}

func (s *Relationship_setContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitRelationship_set(s)
	}
}




func (p *TestSuiteParser) Relationship_set() (localctx IRelationship_setContext) {
	localctx = NewRelationship_setContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TestSuiteParserRULE_relationship_set)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = _la == TestSuiteParserID {
		{
			p.SetState(32)
			p.Relationship()
		}


		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IPolicy_testsContext is an interface to support dynamic dispatch.
type IPolicy_testsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Checks() IChecksContext
	Implied_relations() IImplied_relationsContext
	Delegation_assertions() IDelegation_assertionsContext

	// IsPolicy_testsContext differentiates from other interfaces.
	IsPolicy_testsContext()
}

type Policy_testsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPolicy_testsContext() *Policy_testsContext {
	var p = new(Policy_testsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_policy_tests
	return p
}

func InitEmptyPolicy_testsContext(p *Policy_testsContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_policy_tests
}

func (*Policy_testsContext) IsPolicy_testsContext() {}

func NewPolicy_testsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Policy_testsContext {
	var p = new(Policy_testsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_policy_tests

	return p
}

func (s *Policy_testsContext) GetParser() antlr.Parser { return s.parser }

func (s *Policy_testsContext) Checks() IChecksContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChecksContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChecksContext)
}

func (s *Policy_testsContext) Implied_relations() IImplied_relationsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImplied_relationsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImplied_relationsContext)
}

func (s *Policy_testsContext) Delegation_assertions() IDelegation_assertionsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDelegation_assertionsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDelegation_assertionsContext)
}

func (s *Policy_testsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Policy_testsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Policy_testsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterPolicy_tests(s)
	}
}

func (s *Policy_testsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitPolicy_tests(s)
	}
}




func (p *TestSuiteParser) Policy_tests() (localctx IPolicy_testsContext) {
	localctx = NewPolicy_testsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TestSuiteParserRULE_policy_tests)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(37)
		p.Checks()
	}
	{
		p.SetState(38)
		p.Implied_relations()
	}
	{
		p.SetState(39)
		p.Delegation_assertions()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IChecksContext is an interface to support dynamic dispatch.
type IChecksContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllCheck() []ICheckContext
	Check(i int) ICheckContext

	// IsChecksContext differentiates from other interfaces.
	IsChecksContext()
}

type ChecksContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChecksContext() *ChecksContext {
	var p = new(ChecksContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_checks
	return p
}

func InitEmptyChecksContext(p *ChecksContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_checks
}

func (*ChecksContext) IsChecksContext() {}

func NewChecksContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ChecksContext {
	var p = new(ChecksContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_checks

	return p
}

func (s *ChecksContext) GetParser() antlr.Parser { return s.parser }

func (s *ChecksContext) AllCheck() []ICheckContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICheckContext); ok {
			len++
		}
	}

	tst := make([]ICheckContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICheckContext); ok {
			tst[i] = t.(ICheckContext)
			i++
		}
	}

	return tst
}

func (s *ChecksContext) Check(i int) ICheckContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICheckContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICheckContext)
}

func (s *ChecksContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ChecksContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ChecksContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterChecks(s)
	}
}

func (s *ChecksContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitChecks(s)
	}
}




func (p *TestSuiteParser) Checks() (localctx IChecksContext) {
	localctx = NewChecksContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TestSuiteParserRULE_checks)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Match(TestSuiteParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(42)
		p.Match(TestSuiteParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == TestSuiteParserNEGATION || _la == TestSuiteParserID {
		{
			p.SetState(43)
			p.Check()
		}


		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(TestSuiteParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// ICheckContext is an interface to support dynamic dispatch.
type ICheckContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Relationship() IRelationshipContext
	NEGATION() antlr.TerminalNode

	// IsCheckContext differentiates from other interfaces.
	IsCheckContext()
}

type CheckContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCheckContext() *CheckContext {
	var p = new(CheckContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_check
	return p
}

func InitEmptyCheckContext(p *CheckContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_check
}

func (*CheckContext) IsCheckContext() {}

func NewCheckContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CheckContext {
	var p = new(CheckContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_check

	return p
}

func (s *CheckContext) GetParser() antlr.Parser { return s.parser }

func (s *CheckContext) Relationship() IRelationshipContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationshipContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationshipContext)
}

func (s *CheckContext) NEGATION() antlr.TerminalNode {
	return s.GetToken(TestSuiteParserNEGATION, 0)
}

func (s *CheckContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CheckContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *CheckContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterCheck(s)
	}
}

func (s *CheckContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitCheck(s)
	}
}




func (p *TestSuiteParser) Check() (localctx ICheckContext) {
	localctx = NewCheckContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TestSuiteParserRULE_check)
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case TestSuiteParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(51)
			p.Relationship()
		}


	case TestSuiteParserNEGATION:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(52)
			p.Match(TestSuiteParserNEGATION)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(53)
			p.Relationship()
		}



	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}


errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IImplied_relationsContext is an interface to support dynamic dispatch.
type IImplied_relationsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllImplied_relation() []IImplied_relationContext
	Implied_relation(i int) IImplied_relationContext

	// IsImplied_relationsContext differentiates from other interfaces.
	IsImplied_relationsContext()
}

type Implied_relationsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImplied_relationsContext() *Implied_relationsContext {
	var p = new(Implied_relationsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_implied_relations
	return p
}

func InitEmptyImplied_relationsContext(p *Implied_relationsContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_implied_relations
}

func (*Implied_relationsContext) IsImplied_relationsContext() {}

func NewImplied_relationsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Implied_relationsContext {
	var p = new(Implied_relationsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_implied_relations

	return p
}

func (s *Implied_relationsContext) GetParser() antlr.Parser { return s.parser }

func (s *Implied_relationsContext) AllImplied_relation() []IImplied_relationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImplied_relationContext); ok {
			len++
		}
	}

	tst := make([]IImplied_relationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImplied_relationContext); ok {
			tst[i] = t.(IImplied_relationContext)
			i++
		}
	}

	return tst
}

func (s *Implied_relationsContext) Implied_relation(i int) IImplied_relationContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImplied_relationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImplied_relationContext)
}

func (s *Implied_relationsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Implied_relationsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Implied_relationsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterImplied_relations(s)
	}
}

func (s *Implied_relationsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitImplied_relations(s)
	}
}




func (p *TestSuiteParser) Implied_relations() (localctx IImplied_relationsContext) {
	localctx = NewImplied_relationsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TestSuiteParserRULE_implied_relations)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(TestSuiteParserT__3)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(57)
		p.Match(TestSuiteParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == TestSuiteParserID {
		{
			p.SetState(58)
			p.Implied_relation()
		}


		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(64)
		p.Match(TestSuiteParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IImplied_relationContext is an interface to support dynamic dispatch.
type IImplied_relationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllObject_rel() []IObject_relContext
	Object_rel(i int) IObject_relContext

	// IsImplied_relationContext differentiates from other interfaces.
	IsImplied_relationContext()
}

type Implied_relationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImplied_relationContext() *Implied_relationContext {
	var p = new(Implied_relationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_implied_relation
	return p
}

func InitEmptyImplied_relationContext(p *Implied_relationContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_implied_relation
}

func (*Implied_relationContext) IsImplied_relationContext() {}

func NewImplied_relationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Implied_relationContext {
	var p = new(Implied_relationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_implied_relation

	return p
}

func (s *Implied_relationContext) GetParser() antlr.Parser { return s.parser }

func (s *Implied_relationContext) AllObject_rel() []IObject_relContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IObject_relContext); ok {
			len++
		}
	}

	tst := make([]IObject_relContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IObject_relContext); ok {
			tst[i] = t.(IObject_relContext)
			i++
		}
	}

	return tst
}

func (s *Implied_relationContext) Object_rel(i int) IObject_relContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IObject_relContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IObject_relContext)
}

func (s *Implied_relationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Implied_relationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Implied_relationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterImplied_relation(s)
	}
}

func (s *Implied_relationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitImplied_relation(s)
	}
}




func (p *TestSuiteParser) Implied_relation() (localctx IImplied_relationContext) {
	localctx = NewImplied_relationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TestSuiteParserRULE_implied_relation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Object_rel()
	}
	{
		p.SetState(67)
		p.Match(TestSuiteParserT__4)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(68)
		p.Object_rel()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IObject_relContext is an interface to support dynamic dispatch.
type IObject_relContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Object() IObjectContext
	Relation() IRelationContext

	// IsObject_relContext differentiates from other interfaces.
	IsObject_relContext()
}

type Object_relContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObject_relContext() *Object_relContext {
	var p = new(Object_relContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_object_rel
	return p
}

func InitEmptyObject_relContext(p *Object_relContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TestSuiteParserRULE_object_rel
}

func (*Object_relContext) IsObject_relContext() {}

func NewObject_relContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Object_relContext {
	var p = new(Object_relContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TestSuiteParserRULE_object_rel

	return p
}

func (s *Object_relContext) GetParser() antlr.Parser { return s.parser }

func (s *Object_relContext) Object() IObjectContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IObjectContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IObjectContext)
}

func (s *Object_relContext) Relation() IRelationContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationContext)
}

func (s *Object_relContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Object_relContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Object_relContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.EnterObject_rel(s)
	}
}

func (s *Object_relContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TestSuiteListener); ok {
		listenerT.ExitObject_rel(s)
	}
}




func (p *TestSuiteParser) Object_rel() (localctx IObject_relContext) {
	localctx = NewObject_relContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, TestSuiteParserRULE_object_rel)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Object()
	}
	{
		p.SetState(71)
		p.Match(TestSuiteParserT__5)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(72)
		p.Relation()
	}


